<resources>
    <string name="app_name">Hot Soup</string>
    <string name="username">Käyttäjätunnus</string>
    <string name="signin">Kirjaudu</string>
    <string name="password">Salasana</string>
    <string name="new_user">Luo uusi tili</string>
    <string name="password_again">Salasana uudestaan</string>
    <string name="create_new_account">Luo uusi tili</string>
    <string name="password_strength_weak">Heikko</string>
    <string name="password_strength_medium">Keskitaso</string>
    <string name="password_strength_strong">Vahva</string>
    <string name="password_strength_very_strong">Todella vahva</string>
    <string name="weak">Heikko</string>
    <string name="password_info">Salasanan täytyy olla vähintään 12 merkkiä pitkä ja sisältää vähintään yhden numeron ja erikoismerkin</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_meter">Password Meter</string>
    <string name="remember_me">Muista minut</string>
    <string name="insert_date">Insert date:</string>
    <string name="insert_date_here">Insert date here:</string>
    <string name="meals_added_on_given_date">Meals added on given date:</string>
    <string name="choose_wanted_food_by_clicking_it">Choose wanted food by clicking it</string>
    <string name="estimation_grams">Estimation (grams):</string>
    <string name="date_dd_mm_yyyy">date dd/mm/yyyy</string>
    <string name="insert_food_name">insert food name:</string>
    <string name="food_search">Food search:</string>
    <string name="portion_size">Portion size:</string>
    <string name="show_added_meals">Show added meals</string>
    <string name="sign_in">Kirjaudu sisään</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_menu">Food menu</string>
    <string name="Diet_menu">Ruokavalio</string>
    <string name="carbon_foot_print">Hiilijalanjälki</string>
    <string name="Random_facts">Riskitekijät</string>
    <string name="weight_control">Painonhallinta</string>
    <string name="profile">Profiili</string>
    <string name="log_out">Kirjaudu ulos</string>
    <string name="see_profile">Tarkastele</string>
    <string name="edit_profile">Muokkaa</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="height">Pituus(cm)</string>
    <string name="home_city">Asuinpaikkakunta</string>
    <string name="birth_year">Syntymäaika</string>


    <string name="man">Mies</string>
    <string name="woman">Nainen</string>
    <string name="other">Muu</string>
    <string name="gender">Sukupuoli</string>
    <string name="human_picture">human_picture</string>
    <string name="human">human</string>
    <string name="reeturn">Return</string>
    <string name="search_food_diaries_by_inserting_the_date">Search food diaries by inserting the date</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="search">search</string>
    <string name="you_just_added_a_meal">you just added a meal</string>
    <string name="edit_the_selected_meal">Edit the selected meal</string>
    <string name="delete">delete</string>
    <string name="fats_g">fats (g)</string>
    <string name="carbs_g">carbs (g)</string>
    <string name="portion_g">portion (g)</string>
    <string name="alcohol_g">alcohol (g)</string>
    <string name="sugar_g">sugar (g)</string>
    <string name="fiber_g">fiber (g)</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="food_name">food name</string>
    <string name="protein_g">protein (g)</string>
    <string name="create_a_meal">Create a meal</string>
    <string name="did_you_know">Did you know?</string>
    <string name="todo">TODO</string>
    <string name="save_your_choises">Tallenna valintasi menemällää tarkastelu tilaan</string>
    <string name="new_weight">Lisää uusi paino</string>
    <string name="bmi">PainoIndeksi</string>
    <string name="save_mass">Tallenna paino</string>
    <string name="remove_last_weight">Poista viimeisin mittaus</string>
    <string name="your_last_weight">Sinun viimeisin painosi oli:</string>
    <string name="height_is">Piitutesi on:</string>
    <string name="calculated_bmi">Laskettu painoindeksisi on:</string>
    <string name="bmi_info">Painoindeksiä voi käyttää suuntaanäyttävänä työkaluna painonhallinnassa, mutta muista ettei se ota muita ominaisuuksia huomioon kuin painon ja pituuden. Esimerksiksi korkea lihasmassa voi vääristää painoindeksin antamaa tulosta</string>
    <string name="bmi_says">Painoindeksin mukaan olet</string>
    <string name="underWeight">Alipainoinen</string>
    <string name="normal_weight">Normaali painoinen</string>
    <string name="overweight">Lievästi ylipainoinen</string>
    <string name="obese">Merkittävästi ylipainoinen</string>
    <string name="extremly_obese">Sairaalloisen ylipainoinen</string>
    <string name="show_me">show_me</string>
    <string name="extras">Extras</string>
    <string name="no_weight_yet">Et ole syöttänyt vielä painoa</string>
    <string name="give_weight_height">Anna painosi ja pituutesi ensin</string>
    <string name="date_format">Date dd.mm.yyyy</string>
    <string name="search_foods">Search foods:</string>

    <string name="choose">Valitse ruokavaliosi:</string>
    <string name="omnivore">Sekasyöjä</string>
    <string name="vegetarian">Kasvissyöjä</string>
    <string name="vegan">Vegaani</string>

    <string name="choosecar">Valitse autosi tyyppi:</string>
    <string name="nocar">Ei autoa</string>
    <string name="petrol">Bensiiniauto</string>
    <string name="diesel">Diesel</string>
    <string name="go_next">Jatka seuraavaan</string>
</resources>