<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center_horizontal"
    tools:context=".BMICalculator">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_weight_bmi"
        android:layout_marginBottom="12dp"
        android:text="@string/your_last_weight"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_height_bmi"
        android:text="@string/height_is"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_bmi_bmi"
        android:text="@string/calculated_bmi"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_info_bmi"
        android:text="aaaaa"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/bmi_info"
        android:textSize="22sp"/>

</LinearLayout>