<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/natural_white"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan"
        android:text="@string/create_a_meal"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="137dp"
        android:layout_height="104dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo_main"
        android:contentDescription="TODO" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/natural_white"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fiberHere"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/fiber_g"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.469"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/sugarHere"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/sugar_g"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.469"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/alcoholHere"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/alcohol_g"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.577"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/portionHere"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/portion_g"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.277"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/carbsHere"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/carbs_g"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/fatsHere"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/fats_g"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.277"
            android:importantForAutofill="no" />



        <EditText
            android:id="@+id/foodNameHere"
            android:layout_width="124dp"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/food_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#B6B6B6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171"
            android:autofillHints="" />

        <EditText
            android:id="@+id/dateHere"
            android:layout_width="127dp"
            android:layout_height="44dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="dd.mm.yyyy"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#B6B6B6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171" />

    </GridLayout>
    <EditText
    android:id="@+id/proteinHere"
        android:layout_gravity="center_horizontal"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:ems="10"
    android:hint="@string/protein_g"
    android:inputType="numberDecimal"
    android:textAlignment="center"

    android:importantForAutofill="no" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9ac2be"
            android:text="@string/save"
            android:textColor="#020000"
            android:layout_marginEnd="16dp"
            />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9ac2be"
            android:text="@string/cancel"
            android:textColor="#000000"
            />
    </LinearLayout>
</LinearLayout>