<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpProfileActivity"
    android:background="@color/natural_white">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:contentDescription="logo"
    android:src="@drawable/logo_text"
    android:layout_marginTop="52dp" />


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/cyan"
                android:focusable="true"
                android:hint="@string/username"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/edit_username"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/least_5_charters"
                android:textColor="@color/grey_font"/>
            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:freezesText="true"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"

                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:maxHeight="20dip"
                    android:minHeight="20dip"
                    android:progress="0" />

            </LinearLayout>

            <TextView
                android:id="@+id/password_strength"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/weak" />

            <TextView
                android:id="@+id/login_instructions"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password_info" />

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginTop="10dp"
                android:hint="@string/password_again"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_password_again"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_signup"

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"
                android:elevation="8dp"
                android:onClick="makeProfile"
                android:text="@string/create_new_account" />




    <Button
        android:id="@+id/button_signin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="end"
        android:onClick="toSingIn"

        android:textSize="18sp"
        android:text="@string/sign_in"
        />

    </LinearLayout>
</ScrollView>
</LinearLayout>

