<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/natural_white"
    android:orientation="vertical">


    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="629dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/smokingimage"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/tupakointi"
                tools:source="@drawable/tupakointi" />

            <TextView
                android:id="@+id/smokingdataview"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/did_you_know"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/showmebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_me"
                android:textColor="#000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:orientation="vertical"
                android:padding="10dp">

                <FrameLayout
                    android:id="@+id/fragmentview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>